# vision_utils

./: .gitignore  .travis.yml  CMakeLists.txt  KTP2PPL.cpp  README.md  dependencies.rosinstall  dgait2ppl.cpp  mainpage.dox  manifest.xml  package.xml  pplp_benchmarker.cpp  pplp_benchmarker.h  rlpd2ppl.cpp  rosdoc.yaml
cmake/: img_path.h.in
config/: light_intensity_measurer_config.yaml
launch/: database_ceiling_camera.launch  database_old2new_converter.launch  database_player.launch  database_recorder.launch  database_viewer.launch  foo_nite_subscriber.launch  light_intensity_measurer.launch  test_foo_vision_skill.launch
msg/: Rect.msg
scripts/: make_redis_voronoi.bash  (+5 more)
src/: CMakeLists.txt
src/camera_utils/: CMakeLists.txt  camera_utils.cpp  camera_utils.h  image_topic_to_video.cpp  launcher_camera_blocker_skill.cpp  opencv_calibration.cpp  rgb_and_depth_to_yaml.cpp  ros_camera_info_binary_to_yaml.cpp  ros_camera_info_to_binary.cpp  test_camera_utils.cpp
src/color/: CMakeLists.txt  color_utils.h  colormaps.h  hue_utils.h  test_color_utils.cpp
src/compressed_rounded_image_transport/: CMakeLists.txt  cv_conversion_float_uchar.h  depth_to_rgb_viewer.cpp  float_image_generator.h  nan_handling.h  print_3f_img.h  test_cv_conversion_float_uchar.cpp
src/connected_comp/: CMakeLists.txt  cblob_wrapper.cpp  cblob_wrapper.h  comp_labeller_interface.h  cv_blob_wrapper.cpp  cv_blob_wrapper.h  cv_flood_fill_wrapper.cpp  disjoint_sets.cpp  disjoint_sets2.cpp  disjoint_sets2.h  test_blobs.cpp  test_comp_labeller_interface.cpp  test_cv_flood_fill_wrapper.cpp
src/databases_io/: CMakeLists.txt  database_player.h  dgaitdb.cpp  dgaitdb.h  filename_prefix2imgs.h  g3d2imgs.cpp  g3d2imgs.h  liris2imgs.h  oni2imgs.cpp  oni2imgs.h  rlpd2imgs.cpp  rlpd2imgs.h  test_person_histogram_set_variables.h
src/image_utils/: CMakeLists.txt  centroid.h  connected_comp_interface.h  content_processing.h  depth_canny.h  drawing_utils.h  head_finder.h  image_comparer.h  image_contour.h  io.h  layer_utils.h  make_opencv_interface.h  mask.h  mask_acceleration.h  opencv_face_detector.h  resize_utils.h  test_border_remover.cpp  test_drawing_utils.cpp  test_google_images_search.cpp  test_image_utils.cpp  test_io.cpp  test_opencv_face_detector.cpp  test_voronoi.cpp  titlemaps.h  value_remover.h  voronoi.h
src/kinect_opennni_utils/: CMakeLists.txt  test_kinect_openni_utils.cpp
src/light_intensity/: CMakeLists.txt  lightintensitymeasurer.cpp  main.cpp
src/ocr_utils/: CMakeLists.txt  OcrUtils.cpp  OcrUtils.h
src/point_clouds/: blob_segmenter.h  cloud_tilter.h  cloud_viewer.h  cloud_viewer_gnuplot.h  clusterer.h  ground_plane_finder.h  ground_plane_finder_lite.h  image_clusterer.h
src/ppl_benchmarking/: CMakeLists.txt  KTP2PPL.cpp  dgait2ppl.cpp  pplp_benchmarker.cpp  rlpd2ppl.cpp
src/ppl_utils/: CMakeLists.txt  pose2ppl.cpp  ppl2marker.cpp  ppl_viewer.cpp
src/skill_templates/: CMakeLists.txt  rgb_depth_skill.h  rgb_depth_user_skill.h  rgb_skill.h
src/skill_templates/foo_rgb_skill/: CMakeLists.txt  foo_rgb_skill.h  launcher_foo_rgb_skill.cpp
src/skill_templates/nite/: CMakeLists.txt  foo_nite_nodelet_subscriber.cpp  foo_nite_subscriber.cpp  nite_nodelet_subscriber_template.h  nite_subscriber_template.h
src/tests_opencv/: CMakeLists.txt  test_opencv_image_access.cpp  test_opencv_image_io_speed.cpp  test_opencv_image_resize.cpp  test_opencv_morphology_operators.cpp  test_opencv_text_fonts.cpp
src/translator/: CMakeLists.txt  Translator.cpp
src/utils/: CMakeLists.txt  StringUtils.cpp  lap.cpp
src/visu_utils/: CMakeLists.txt  GraphMaker.h  array_to_color.h  chart_pie_utils.h  histogram_utils.h  mini_stage.h  mini_stage_plugins.h  pie_chart_utils.h  test_GraphMaker.cpp  test_array_to_color.cpp  test_histogram_utils.cpp  test_mini_stage.cpp  test_pie_chart_utils.cpp  test_timer_chart.cpp  timer_chart.h
src/xml_images_interface/: CMakeLists.txt  test_xml_images_interface.cpp  xml_images_interface.cpp  xml_images_interface.h
src/xml_images_reader/: CMakeLists.txt  test_xml_images_reader.cpp  xml_images_reader.cpp  xml_images_reader.h
test/: CMakeLists.txt  comment_display.sh  gtest_GraphMaker.cpp  gtest_array_to_color.cpp  gtest_atan3D.cpp  gtest_blob_segmenter.cpp  gtest_border_remover.cpp  gtest_cloud_tilter.cpp  gtest_cloud_viewer.cpp  gtest_cloud_viewer_gnuplot.cpp  gtest_clusterer.cpp  gtest_color_utils.cpp  gtest_content_processing.cpp  gtest_cv_conversion_float_uchar.cpp  gtest_drawing_utils.cpp  gtest_ellipse_utils.cpp  gtest_filename_prefix2imgs.cpp  gtest_g3d2imgs.cpp  gtest_google_images_search.cpp  gtest_ground_plane_finder.cpp  gtest_head_finder.cpp  gtest_histogram_utils.cpp  gtest_image_clusterer.cpp  gtest_image_comparer.cpp  gtest_image_contour.cpp  gtest_image_utils.cpp  gtest_interpolator.cpp  gtest_io.cpp  gtest_kinect_openni_utils.cpp  gtest_layer_utils.cpp  gtest_liris2imgs.cpp  gtest_mask_acceleration.cpp  gtest_mini_stage.cpp  gtest_nano_skill.cpp  gtest_ocr_utils.cpp  gtest_opencv_face_detector.cpp  gtest_opencv_ml.cpp  gtest_pie_chart_utils.cpp  gtest_ppl_matcher.cpp  gtest_ppl_utils.cpp  (+9 more)
third_parties/blob/: Blob.h  CMakeLists.txt
third_parties/easykf-2.03/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  aclocal.m4  aminclude.am  configure  configure.ac  easykf.pc.in  easykf.spec  easykf.spec.in  reconf
third_parties/easykf-2.03/doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in
third_parties/easykf-2.03/doc/eps/: Makefile.in
third_parties/easykf-2.03/examples/: Makefile.am  Makefile.in  example-001.cc  example-002.cc  example-003.cc  example-004.cc  example-005.cc  example-006.cc  example-007.cc  example-008.cc  example-009.cc  foo.cpp
third_parties/easykf-2.03/examples/Data/: Makefile.am  Makefile.in
third_parties/easykf-2.03/examples/Output/: Makefile.am  Makefile.in
third_parties/easykf-2.03/m4/: Makefile.am  Makefile.in
third_parties/easykf-2.03/src/: Makefile.am  Makefile.in  ekf.h  ekf_types.h  ukf.h  ukf_math.h  ukf_parameter_ndim.h  ukf_parameter_scalar.h  ukf_samples.h  ukf_sr_state_ndim.h  ukf_state_ndim.h  ukf_types.h
(+656 files in other folders)
