<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>vision_utils</name>
  <version>0.0.0</version>
  <description>
    vision_utils supplies a variety of tools and utilities to
    manipulate color images, depth images, user masks, and more.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Ubuntu packages -->
  <depend>curl</depend>
  <depend>libgsl</depend>
  <depend>libopenni2-dev</depend>
  <!-- ROS -->
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <!-- AD -->
  <depend>cvstage</depend>
  <depend>people_msgs_rl</depend>

  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
