add_subdirectory(color)
ADD_SUBDIRECTORY(camera_utils)
ADD_SUBDIRECTORY(connected_comp)
ADD_SUBDIRECTORY(databases_io)
ADD_SUBDIRECTORY(image_utils)
ADD_SUBDIRECTORY(light_intensity)
ADD_SUBDIRECTORY(ocr_utils)
ADD_SUBDIRECTORY(point_clouds)
ADD_SUBDIRECTORY(tests_opencv)
ADD_SUBDIRECTORY(visu_utils)
ADD_SUBDIRECTORY(skill_templates)
ADD_SUBDIRECTORY(xml_images_interface)
ADD_SUBDIRECTORY(xml_images_reader)
