add_subdirectory(color)
ADD_SUBDIRECTORY(compressed_rounded_image_transport)
ADD_SUBDIRECTORY(connected_comp)
ADD_SUBDIRECTORY(databases_io)
ADD_SUBDIRECTORY(image_utils)
ADD_SUBDIRECTORY(ocr_utils)
ADD_SUBDIRECTORY(point_clouds)
ADD_SUBDIRECTORY(ppl_benchmarking)
ADD_SUBDIRECTORY(ppl_utils)
ADD_SUBDIRECTORY(skill_templates)
ADD_SUBDIRECTORY(tests_opencv)
add_subdirectory(utils)
ADD_SUBDIRECTORY(visu_utils)
ADD_SUBDIRECTORY(xml_images_interface)
ADD_SUBDIRECTORY(xml_images_reader)
