add_library(OcrUtils OcrUtils.cpp)
target_link_libraries(OcrUtils string_utils ${catkin_LIBRARIES})

install(TARGETS OcrUtils
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
