add_executable(test_opencv_image_access.exe test_opencv_image_access.cpp)
target_link_libraries(test_opencv_image_access.exe ${catkin_LIBRARIES})

add_executable(test_opencv_image_resize.exe test_opencv_image_resize.cpp)
target_link_libraries(test_opencv_image_resize.exe ${catkin_LIBRARIES})

add_executable(test_opencv_morphology_operators.exe test_opencv_morphology_operators.cpp)
target_link_libraries(test_opencv_morphology_operators.exe ${catkin_LIBRARIES})

add_executable(test_opencv_text_fonts.exe test_opencv_text_fonts.cpp)
target_link_libraries(test_opencv_text_fonts.exe ${catkin_LIBRARIES})

add_executable(test_opencv_image_io_speed.exe test_opencv_image_io_speed.cpp)
target_link_libraries(test_opencv_image_io_speed.exe ${catkin_LIBRARIES})
